--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="main_nav">
         <div class="header_icon">
-          <img src="icon/Group 5.png" alt="" />
+          <img src="Image/Group 5.png" alt="" />
           <p>Idea</p>
         </div>
 
@@ -26,7 +26,7 @@
             <li><a href="">About</a></li>
             <li><a href="">Works</a></li>
           </ul>
-          <img class="nav_image" src="image/Ellipse.png" alt="" />
+          <img class="nav_image" src="image/Ellipse.png" alt="This is error" />
         </div>
       </div>
     </header>
